deploy/oauth2-proxy/oauth2-proxy-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: oauth2-proxy
  namespace: oauth2-proxy
spec:
  parentRefs:
  - name: oauth2-proxy
    namespace: oauth2-proxy
    sectionName: https
  hostnames:
  - "*.prow.gardener.cloud"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: oauth2-proxy
      port: 80
